# rust-xaml-island

./: Cargo.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
examples/basic-winit/: Cargo.toml  manifest.xml
examples/basic-winit/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
src/: lib.rs
src/windows_x86_64_msvc/: lib.rs.html
src/xaml_island/: lib.rs.html
windows/: all.html  index.html  sidebar-items.js
windows/UI/: index.html  sidebar-items.js  struct.Color.html  struct.ColorHelper.html  struct.Colors.html  struct.UIContentRoot.html  struct.UIContext.html  struct.WindowId.html
windows/UI/Xaml/: index.html  sidebar-items.js  struct.AdaptiveTrigger.html  struct.Application.html  struct.ApplicationHighContrastAdjustment.html  struct.DragUI.html  (+115 more)
windows/Win32/: index.html
windows/core/: index.html  struct.AgileReference.html  struct.HSTRING.html  struct.IInspectable.html  struct.IUnknown.html  trait.Interface.html
windows_x86_64_msvc/: index.html
xaml_island/: all.html  index.html  sidebar-items.js  struct.XamlIsland.html
(+234 files in other folders)
