[workspace]
members = [
    "examples/*",
]

[package]
name = "xaml-island"
version = "0.1.0"
edition = "2021"
description = "Xaml islands for rust"
homepage = "https://github.com/thisKai/rust-xaml-island"
repository = "https://github.com/thisKai/rust-xaml-island"
documentation = "https://thiskai.github.io/rust-xaml-island/xaml_island/"
license = "MIT"
keywords = ["windows", "xaml", "island", "desktop", "gui"]
categories = ["os::windows-apis", "api-bindings", "gui"]

[dependencies.windows]
version = ">= 0.30, <= 0.35"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT_Xaml",
    "UI_Xaml_Hosting",
]
